Fix bug where footer covered tiles sometimes

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
   margin: 0 auto;
   background-color: var(--bg-primary);
   color: var(--fg-primary);
-  padding: 0 1rem 1rem;
+  padding: 0 1rem 14rem;
   width: min(1400px, 90vw);
 }
 
@@ -283,7 +283,6 @@ header {
   gap: 15px;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(25ch, 1fr));
-  margin-bottom: 12rem;
 }
 
 /* Tiles */
